--- a/config/databaseConfig.ini
+++ b/config/databaseConfig.ini
@@ -4,3 +4,6 @@ MYSQL_HOST = 127.0.0.1
 MYSQL_DATABASE = drs 
 MYSQL_USER = root
 MYSQL_PASSWORD = 
+
+[API]
+api_url = http://220.247.224.226:9571/Request_Incident_External_information
