--- a/config/logConfig.ini
+++ b/config/logConfig.ini
@@ -1,8 +1,8 @@
 [loggers]
-keys=root,incident_logger,task_status_logger
+keys=root,OrderProcessor,task_status_logger
 
 [handlers]
-keys=console_handler,file_handler_incident_logger,file_handler_task_status_logger
+keys=console_handler,file_handler_OrderProcessor,file_handler_task_status_logger
 
 [formatters]
 keys=console_formatter,file_formatter
@@ -11,10 +11,10 @@ keys=console_formatter,file_formatter
 level=INFO
 handlers=
 
-[logger_incident_logger]
+[logger_OrderProcessor]
 level=INFO
-handlers=console_handler,file_handler_incident_logger
-qualname=incident_logger
+handlers=console_handler,file_handler_OrderProcessor
+qualname=OrderProcessor
 
 [logger_task_status_logger]
 level=INFO
@@ -26,11 +26,11 @@ class=StreamHandler
 formatter=console_formatter
 args=(sys.stdout,)
 
-[handler_file_handler_incident_logger]
+[handler_file_handler_OrderProcessor]
 class=handlers.RotatingFileHandler
 formatter=file_formatter
-; args=('E:\\Logger\\rptResumneDaily\\incident_logger.log','a',1000000,100)
-args=('/SLT_LOGGER/incident_logger.log',)
+; args=('E:\\Logger\\rptResumneDaily\\OrderProcessor.log','a',1000000,100)
+args=('/SLT_LOGGER/OrderProcessor.log',)
 
 [handler_file_handler_task_status_logger]
 class=handlers.RotatingFileHandler
