--- a/config/filePathConfig.ini
+++ b/config/filePathConfig.ini
@@ -9,5 +9,5 @@ WIN_logConfig = D:\SLT_DRS\Git_DRS\Process_Config\config\logConfig.ini
 LIN_logConfig = /home/MSii/Downloads/Process_Config/Config/logConfig.ini
 
 [ApiConfigFile_path]
-WIN_apiConfig = D:\SLT_DRS\Git_DRS\Process_Config\config\apiConfig.ini
+WIN_apiConfig = D:\SLT_DRS\Git_DRS\Process_Config\config\databaseConfig.ini
 LIN_apiConfig = /home/MSii/Downloads/Process_Config/Config/apiConfig.ini
